firefox quiz flashcard backface visibliity bug fixed

--- a/frontend/src/components/active_quiz/quiz_flashcard/QuizFlashcard.scss
+++ b/frontend/src/components/active_quiz/quiz_flashcard/QuizFlashcard.scss
@@ -52,4 +52,15 @@
       }
     }
   }
+
+  // Firefox has buggy behaviour with backface-visibility,
+  // so I have to apply some additional styles only on firefox browsers
+  // to achieve the desired affect. (Applied through JS).
+  .firefox-container {
+    backface-visibility: hidden;
+  }
+  .firefox-back-face {
+    background-color: $beige;
+    border-radius: 20px;
+  }
 }
